--- a/Desafios/desafio_videos/index.html
+++ b/Desafios/desafio_videos/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Desafio Videos</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <h1>Videos Legais para Assistir</h1>
-    <p><a href="paginas/pag002.html" target="_self" rel="next"><img witdh="560" src="video1.jpg" alt="video1"></a></p>
+<body style="background-color: rgb(26, 26, 27); font-family: Montserrat;">
+    <h1 style="color: aliceblue;">Vídeos Legais para Assistir</h1>
+    <p>
+        <a href="paginas/pag002.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="capa html"></a>
+        <a href="paginas/pag003.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="capa javascript"></a>
+    </p>
+    <p>
+        <a href="paginas/pag004.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="capa hardware"></a>
+        <a href="paginas/pag005.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="capa pyton"></a>
+    </p>
+    
 </body>
 </html>
