--- a/Desafios/desafio_videos/paginas/pag002.html
+++ b/Desafios/desafio_videos/paginas/pag002.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 2</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Antigo Curso de HTML5</title>
 </head>
 <body>
-    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Ejkb_YpuHWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-    <p>Ver Curso Completo</p>
-    <p><a href="../index.html" rel="prev"><img src="voltar.png" alt="voltar"></a></p>
+    <h1>Antigo Curso de HTML5</h1>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+    <p><a href="https://youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank" rel="external">Veja o Curso Completo</a></p>
+    <p><a href="../index.html" target="_self" rel="prev"><img src="../imagens/voltar.png" alt="voltar"></a></p>
+    
 </body>
 </html>
