--- a/Exercicios/ex007/index.html
+++ b/Exercicios/ex007/index.html
@@ -26,8 +26,8 @@
     <h2>Citações Simples</h2>
     <p>Como dizia minha vó <q>Cavalo dado não se olha os dentes.</q></p>
     <h2>Citações Completas</h2>
-    <p>Como dizia o famoso filosovo <b>Píton</b>, que teve como discipulo nada mais nada menos que Karl Marx
-        <blockquote>"Tudo na vida depende do quanto você quer comer alguém. Você trabalha pra comer alguém. Você estuda pra comer alguém. Você usa droga pra comer alguém. Você malha, toma veneno, faz a DESGRAÇA toda pra comer alguém. Você vai no show com a intenção de sair de lá pra comer alguém. Você faz doação, faz caridade, posta foto da caridade que você fez no instagram, no face, pras minas olhar: <q>Ó, ele é caridoso, ele tem pensamento social, á vou dar pra ele</q> pra comer alguém desgraça. Tudo na vida tem a intenção de comer alguém. A quantidade de vontade que você quer esfolar uma buceta DESGRAÇA!"</blockquote>
+    <p>titulo da citação
+        <blockquote>"Citação"</blockquote>
     </p>
     <h2>Abreviações</h2>
     <p>passe o mouse em cima dos testos pontilhados e <i><q>see the magic</q></i> <abbr title="Uniform Resource Locator">URL</abbr>, <abbr title="Modulação">Mo</abbr><abbr title="Demodulação">dem</abbr></p>
