--- a/Exercicios/ex018/fundo006.html
+++ b/Exercicios/ex018/fundo006.html
@@ -9,24 +9,29 @@
         body {
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-position: center center;
             background-size: cover;
             height: 100vh;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
             font-family: Arial, Helvetica, sans-serif;
             padding: 15px;
-            width: 500px;
+            max-width: 500px;
             margin: auto;
             border-radius: 10px;
+            text-align: justify;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam libero? Odio at magnam molestias, ipsa accusantium molestiae repellendus rem dolore voluptate eligendi soluta animi adipisci hic quibusdam, suscipit minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis architecto similique, unde eum voluptates asperiores aliquam exercitationem ipsam ratione in, deleniti culpa excepturi earum, illum repellendus ullam quae nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis consequuntur dolor doloremque fuga sed temporibus libero sunt, aut laborum commodi cumque eveniet molestias quas nemo. Dignissimos iusto neque deleniti eum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam libero? Odio at magnam molestias, ipsa accusantium molestiae repellendus rem dolore voluptate eligendi soluta animi adipisci hic quibusdam, suscipit minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis architecto similique, unde eum voluptates asperiores aliquam exercitationem ipsam ratione in, deleniti culpa excepturi earum, illum repellendus ullam quae nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis consequuntur dolor doloremque fuga sed temporibus libero sunt, aut laborum commodi cumque eveniet molestias quas nemo. Dignissimos iusto neque deleniti eum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam libero? Odio at magnam molestias, ipsa accusantium molestiae repellendus rem dolore voluptate eligendi soluta animi adipisci hic quibusdam, suscipit minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis architecto similique, unde eum voluptates asperiores aliquam exercitationem ipsam ratione in, deleniti culpa excepturi earum, illum repellendus ullam quae nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis consequuntur dolor doloremque fuga sed temporibus libero sunt, aut laborum commodi cumque eveniet molestias quas nemo. Dignissimos iusto neque deleniti eum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam libero? Odio at magnam molestias, ipsa accusantium molestiae repellendus rem dolore voluptate eligendi soluta animi adipisci hic quibusdam, suscipit minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis architecto similique, unde eum voluptates asperiores aliquam exercitationem ipsam ratione in, deleniti culpa excepturi earum, illum repellendus ullam quae nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis consequuntur dolor doloremque fuga sed temporibus libero sunt, aut laborum commodi cumque eveniet molestias quas nemo. Dignissimos iusto neque deleniti eum?</p>
     </main>
     
