--- a/Exercicios/ex023/index.html
+++ b/Exercicios/ex023/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container" id="template-areas"> <!--Div Pai-->
+        <!--Nesse caso, os filhos sao baseados na qtd de conteudos que voce possuir em seu site -->
         <div id="header">
             <p>header</p>
         </div>
